# torlink-gui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsup.sidecar.config.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/release-notes/: v1.4.6.md  v1.4.7.md  v1.4.8.md
.github/workflows/: ci.yml  release.yml  tauri.yml
docs/: upstream.md
nix/: README.md  package.nix
scripts/: ansi-to-svg.ts  build-sidecar-bin.mjs  build-tauri.mjs  dev-before.mjs  dev-search.ts  fetch-itshover-icons.mjs  render-previews-impl.tsx  sync-check.mjs  verify-seeding.ts
src/: browser-gui.ts  index.tsx  tui.tsx  webtorrent.d.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  fs.rs  launch.rs  lib.rs  main.rs  path_guard.rs  persistence.rs  sidecar.rs
src-tauri/src/torrent/: commands.rs  logic.rs  manager.rs  mod.rs
src/cli/: args.test.ts  args.ts
src/config/: config.ts  paths.ts
src/core/: boot.ts  search-state.ts  search.test.ts  search.ts
src/download/: engine.test.ts  engine.ts  history.ts  persist.test.ts  persist.ts  queue.add.test.ts  queue.test.ts  queue.ts  types.ts
src/gui/: App.tsx  main.tsx  sections.ts
src/sidecar/: main.ts  search-server.test.ts  search-server.ts
src/sources/: anilibria.test.ts  anilibria.ts  bittorrented.test.ts  bittorrented.ts  build.ts  cache.test.ts  cache.ts  eztv.test.ts  eztv.ts  fitgirl.test.ts  fitgirl.ts  magnet.ts  meta.ts  nyaa.test.ts  nyaa.ts  online-fix.test.ts  online-fix.ts  piratebay.test.ts  piratebay.ts  registry.ts  rss.test.ts  rss.ts  style.ts  subsplease.test.ts  subsplease.ts  torlock.test.ts  torlock.ts  torrentBytes.ts  torrentFile.ts  torrentgalaxy.test.ts  torrentgalaxy.ts  types.ts  x1337.ts  xatab.test.ts  (+3 more)
updater/: latest.json
(+69 files in other folders)
